--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "DfE front-end toolkit",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.15.4",
     "govuk-elements-sass": "^3.1.1",
     "govuk_frontend_toolkit": "^7.0.1",
     "govuk_template_jinja": "^0.22.3",
