--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "govuk_frontend_toolkit": "^7.0.1",
     "govuk_template_jinja": "^0.22.3",
     "gulp-sass": "^3.1.0",
+    "jquery": "^3.2.1",
     "nunjucks": "^3.0.1"
   },
   "devDependencies": {
