--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,9 @@
   "extends": "airbnb-base",
   "rules": {
     "no-empty": ["error", { "allowEmptyCatch": true }],
+    "no-console": 1,
     "prefer-rest-params": "off",
     "prefer-spread": "off",
-    "strict": "off"
+    "strict": "on"
   }
 }
