--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "dependencies": {
     "express": "^4.16.2",
     "govuk-elements-sass": "^3.1.2",
-    "govuk_frontend_toolkit": "^7.1.0",
+    "govuk_frontend_toolkit": "^7.2.0",
     "govuk_template_jinja": "^0.22.3",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "nunjucks": "^3.0.1"
   },
   "devDependencies": {
-    "eslint": "^4.10.0",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.9.0"
+    "gulp-clean-css": "^3.9.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0"
   },
   "scripts": {
     "start": "node server.js"
