--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-uglify": "^3.0.0"
   },
   "scripts": {
+    "dev": "settings='dev' node server.js",
     "start": "node server.js"
   },
   "repository": {
