--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "select2": "^4.0.6-rc.1"
   },
   "scripts": {
     "dev": "settings='dev' node server.js",
