--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "govuk_template_jinja": "^0.22.3",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.2.1",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
+    "browserify": "^16.5.2",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -21,7 +23,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "select2": "^4.0.6-rc.1"
+    "select2": "^4.0.6-rc.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
     "dev": "settings='dev' node server.js",
