--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.0",
     "select2": "^4.0.6-rc.1",
     "vinyl-buffer": "^1.0.1",
