--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
+    "gulp-if": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.0",
@@ -29,7 +30,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
-    "dev": "settings='dev' node server.js",
+    "dev": "NODE_ENV='development' gulp run-server",
     "start": "node server.js"
   },
   "repository": {
