--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^3.0.0",
+    "gulp-inject-string": "^1.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.0",
@@ -30,7 +31,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
-    "dev": "NODE_ENV='development' gulp run-server",
+    "dev": "NODE_ENV='development' DEBUG=gulp gulp run-server",
     "start": "node server.js"
   },
   "repository": {
