--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "dfe-frontend-toolkit",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "DfE front-end toolkit",
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.2",
-    "govuk-elements-sass": "^3.1.2",
+    "govuk-frontend": "^3.11.0",
     "govuk_frontend_toolkit": "^7.2.0",
     "govuk_template_jinja": "^0.22.3",
-    "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "js-cookie": "^2.2.1",
     "nunjucks": "^3.2.0"
@@ -21,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-if": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.5",
